:lipstick: fixing minor layout issue. Also fixed env.sample file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  margin: 4em;
+  margin: 3em;
   background-color: black;
   font-family: monospace;
   overflow: hidden;
